@@ -544,6 +544,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 16672) Include canonical namespace name in
   meta=siteinfo&siprop=namespaces.
 * (bug 16726) siprop=namespacealiases should also list localized aliases
+* (bug 16730) Added apprfiltercascade parameter to list=allpages to filter
+  cascade-protected pages
 
 === Languages updated in 1.14 ===
 
